--- a/Auto Scroll Privacy Policy.html
+++ b/Auto Scroll Privacy Policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  HraceBerry built the Auto Scroll app as
+                  ZurichBlade built the Auto Scroll app as
                   a Free app. This SERVICE is provided by
                   HraceBerry at no cost and is intended for use as
                   is.
