Update Lock Privacy Policy.html

--- a/Lock Privacy Policy.html
+++ b/Lock Privacy Policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  HraceBerry built the  Stock Android: Lock &amp; Flash app as
+                  ZurichBlade built the  Stock Android: Lock &amp; Flash app as
                   a Free app. This SERVICE is provided by
                   HraceBerry at no cost and is intended for use as
                   is.
